# CodeRoutic

./: .gitignore  Cargo.toml  README.md
docs/: claude-auth-testing.md  claude-code-router-flow.md  config.md  router.md  rust-llm-transformer-guide.md
src/: lib.rs  main.rs
src/config/: config_manager.rs  mod.rs  types.rs
src/core/: constants.rs  mod.rs
src/router/: mod.rs  route_handler.rs  route_logic.rs
src/router/plugin/: background_model_check.rs  long_context_check.rs  mod.rs  subagent_model_check.rs  think_model_check.rs  web_search_check.rs
src/server/: mod.rs  server.rs  server_setup.rs
src/server/middleware/: claude_auth.rs  mod.rs
src/transformers/: error.rs  mod.rs  transformer_manager.rs  types.rs
src/transformers/providers/: anthropic.rs  factory.rs  gemini.rs  mod.rs  openai.rs  provider_trait.rs
src/utils/: cache.rs  logger.rs  mod.rs  process_checker.rs
tests/: claude_endpoint_tests.rs  config_tests.rs  mod.rs  provider_transformer_tests.rs  router_tests.rs
