[package]
name = "code_routic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccr"
path = "src/bin/ccr.rs"

[dependencies]
# Web框架
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 配置文件处理
config = "0.14"
# 环境变量处理
dotenv = "0.15"
# HTTP客户端
reqwest = { version = "0.12", features = ["json"] }
# 工具库
anyhow = "1.0"
thiserror = "1.0"