[package]
name = "code_routic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccr"
path = "src/bin/ccr.rs"

[dependencies]
# Web框架
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 配置文件处理
config = "0.15.14"
# 环境变量处理
dotenv = "0.15"
# HTTP客户端
reqwest = { version = "0.12", features = ["json"] }
# 工具库
anyhow = "1.0"
thiserror = "2.0.16"
# 系统目录
dirs = "6.0.0"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# Ctrl+C处理
ctrlc = "3.4"
# 系统库
libc = "0.2"
# 正则表达式
regex = "1.0"

[dev-dependencies]
# 测试框架
tempfile = "3.0"
# HTTP测试
tower = "0.5"
http-body-util = "0.1"
hyper = "1.0"
bytes = "1.0"